--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,23 +1,25 @@
 .top-buffer {
-  margin-top: 25px;
+    margin-top: 25px;
 }
 
 .small-buffer {
-  margin-top: 18px;
+    margin-top: 18px;
 }
 
 .bottom-buffer {
-  margin-bottom: 150px;
+    margin-bottom: 150px;
 }
 
 body {
-  font-size: 1.2em;
+    font-size: 1.2em;
 }
 
 code {
-  background-color: #f5f5f5;
+    background-color: #f5f5f5;
 }
 
-h1, h2, h3 {
-  color: #a333c8;
+h1,
+h2,
+h3 {
+    color: #a333c8;
 }
