--- a/templates/base.html
+++ b/templates/base.html
@@ -1,103 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>{{ config.title }}</title>
     <link rel="shortcut icon" href="/img/logo-hashbang.ico">
 
-    <title>{{ config.title }}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    {% if config.extra.twitter_image %}
-      <meta name="twitter:card" content="summary" />
-      <meta name="twitter:image" content="{{ config.extra.twitter_image | safe }}" />
-    {% endif %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.2/dist/css/uikit.min.css" integrity="sha256-pZpHRcj6CZFsRBMsTVN1REToJ5NifDqnDiHldc30NCs=" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.2/dist/js/uikit.min.js" integrity="sha256-aelue+yPguqZ2R/rxKq0mc7aYS5hGssFutBxDMFPmXY=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.2/dist/js/uikit-icons.min.js" integrity="sha256-B2F7jNPCGnXJUiAkZUB2rElbStXvhNgS/m+Aw1sRQwo=" crossorigin="anonymous"></script>
 
-    {% if page.description %}
-      <meta name="description" content="{{ page.description }}" />
-      <meta name="twitter:description" content="{{ page.description }}" />
-    {% else %}
-      <meta name="description" content="{{ config.description }}" />
-      <meta name="twitter:description" content="{{ config.description }}" />
-    {% endif %}
+    {% include "twitter.html" %}
 
-    {% if page.title %}
-      <meta name="twitter:title" content="{{ page.title }}" />
-    {% else %}
-      <meta name="twitter:title" content="{{ config.title }}" />
-    {% endif %}
-
-    <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" integrity="sha256-UXesixbeLkB/UYxVTzuj/gg3+LMzgwAmg3zD+C4ZASQ=" crossorigin="anonymous">
-
-    <link href="{{ get_url(path="css/style.css") | safe }}" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
   </head>
 
   <body>
+    <div class="uk-container">
 
-    <div class="ui container bottom-buffer">
-      <div class="ui secondary pointing stackable menu">
-        <div class="right menu">
-          {% for link in config.extra.navigation %}
-            <a class="item" href="{{ get_url(path=link.path) | safe }}" id="fonts">{{ link.name }}</a>
-          {% endfor %}
-        </div>
-      </div>
+      {% include "navigation.html" %}
 
-      <div class="top-buffer">
+      <div class="content">
         {% block content %}
         {% endblock content %}
       </div>
 
-      <div class="top-buffer">
-        <hr>
+      <hr>
 
-        <div class="ui horizontal list">
-          <div class="item">
-            <div class="content">
-              <i class="mail icon"></i>
-              <a class="item"
-                 target="_blank"
-                 href="mailto:radovan.bast@uit.no">radovan.bast@uit.no</a>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="content">
-              <i class="github icon"></i>
-              <a class="item"
-                 target="_blank"
-                 href="https://github.com/uit-no/rse">RSE @ UiT</a>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="content">
-              <i class="github icon"></i>
-              <a class="item"
-                 target="_blank"
-                 href="https://github.com/bast">bast</a>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="content">
-              <i class="twitter blue icon"></i>
-              <a class="item"
-                 target="_blank"
-                 href="https://twitter.com/__radovan">__radovan</a>
-            </div>
-          </div>
-        </div>
-      </div>
+      <ul class="uk-iconnav">
+        <li>
+          <a href="mailto:radovan.bast@uit.no" uk-icon="icon: mail">radovan.bast@uit.no</a>
+        </li>
+        <li>
+          <a href="https://github.com/uit-no/rse" target="_blank" uk-icon="icon: github">github.com/uit-no/rse</a>
+        </li>
+        <li>
+          <a href="https://github.com/bast" target="_blank" uk-icon="icon: github">github.com/bast</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/__radovan" target="_blank" uk-icon="icon: twitter">__radovan</a>
+        </li>
+      </ul>
 
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js" integrity="sha256-CgSoWC9w5wNmI1aN8dIMK+6DPelUEtvDr+Bc2m/0Nx8=" crossorigin="anonymous"></script>
-
   </body>
 </html>
