fix css href in sub-pages

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
     {% include "twitter.html" %}
 
-    <link href="style.css" rel="stylesheet">
+    <link href="{{ get_url(path="style.css") }}" rel="stylesheet">
   </head>
 
   <body>
