--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 
       {% include "navigation.html" %}
 
-      <div class="content">
+      <div class="markdown">
         {% block content %}
         {% endblock content %}
       </div>
