--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>{{ config.title }}</title>
-    <link rel="shortcut icon" href="/img/logo-hashbang.ico">
+    <link rel="shortcut icon" href="{{ get_url(path="img/favicon.ico") }}">
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
