update footer link

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,7 +3,7 @@
     <a href="mailto:radovan.bast@uit.no" uk-icon="icon: mail">radovan.bast@uit.no</a>
   </li>
   <li>
-    <a href="https://github.com/uit-no/rse" target="_blank" uk-icon="icon: github">github.com/uit-no/rse</a>
+    <a href="https://github.com/uit-no/research-software.uit.no" target="_blank" uk-icon="icon: github">github.com/uit-no/research-software.uit.no</a>
   </li>
   <li>
     <a href="https://github.com/bast" target="_blank" uk-icon="icon: github">github.com/bast</a>
