--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,14 +1,14 @@
 <ul class="uk-iconnav">
-  <li>
+  <li class="uk-margin-large-right">
     <a href="mailto:radovan.bast@uit.no" uk-icon="icon: mail">radovan.bast@uit.no</a>
   </li>
-  <li>
+  <li class="uk-margin-large-right">
     <a href="https://github.com/uit-no/research-software.uit.no" target="_blank" uk-icon="icon: github">github.com/uit-no/research-software.uit.no</a>
   </li>
-  <li>
+  <li class="uk-margin-large-right">
     <a href="https://github.com/bast" target="_blank" uk-icon="icon: github">github.com/bast</a>
   </li>
-  <li>
+  <li class="uk-margin-large-right">
     <a href="https://twitter.com/__radovan" target="_blank" uk-icon="icon: twitter">__radovan</a>
   </li>
 </ul>
