--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,6 +1,6 @@
 <ul class="uk-iconnav">
   <li class="uk-margin-large-right">
-    <a href="mailto:radovan.bast@uit.no" uk-icon="icon: mail">radovan.bast@uit.no</a>
+    <a href="mailto:rse@uit.no" uk-icon="icon: mail">rse@uit.no</a>
   </li>
   <li class="uk-margin-large-right">
     <a href="https://github.com/uit-no/research-software.uit.no" target="_blank" uk-icon="icon: github">github.com/uit-no/research-software.uit.no</a>
