add margin; closes #19

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class="uk-container">
+    <div class="uk-container uk-margin-large-bottom">
 
       {% include "navigation.html" %}
 
