--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@ $navbar-nav-item-color: #3366dd;
 $navbar-nav-item-hover-color: #cc0099;
 $iconnav-item-color: #3366dd;
 $iconnav-item-hover-color: #cc0099;
+$global-secondary-background: #993366;
 
 // https://getuikit.com/docs/sass
 @import "../uikit/src/scss/variables-theme.scss";
