--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,6 +7,9 @@ $iconnav-item-color: #3366dd;
 $iconnav-item-hover-color: #cc0099;
 $global-primary-background: #3366cc;
 $global-secondary-background: #993366;
+$base-code-color: #cc0099;
+$text-meta-color: #666666;
+$table-header-cell-color: #666666;
 
 // https://getuikit.com/docs/sass
 @import "../uikit/src/scss/variables-theme.scss";
