more consistent update script for uikit

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.2/dist/css/uikit.min.css" integrity="sha256-pZpHRcj6CZFsRBMsTVN1REToJ5NifDqnDiHldc30NCs=" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.2/dist/js/uikit.min.js" integrity="sha256-aelue+yPguqZ2R/rxKq0mc7aYS5hGssFutBxDMFPmXY=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.2/dist/js/uikit-icons.min.js" integrity="sha256-B2F7jNPCGnXJUiAkZUB2rElbStXvhNgS/m+Aw1sRQwo=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.16.17/dist/css/uikit.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.17/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.17/dist/js/uikit-icons.min.js"></script>
 
     {% include "twitter.html" %}
 
