--- a/templates/post.html
+++ b/templates/post.html
@@ -1,3 +1,5 @@
+{% import "macros.html" as macros %}
+
 {% extends "base.html" %}
 
 {% block content %}
@@ -17,7 +19,7 @@
 
     <hr>
 
-    {{ page.content | safe }}
+    {{ page.content | replace(from="<!-- toc -->", to=macros::toc(page=page)) | safe }}
 
   </article>
 {% endblock content %}
