mv navigation logic out of config.toml
advantage of having it outside is that changes
can be previewed immediately

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,26 +1,26 @@
+{% set data = load_data(path="content/navigation.yml") %}
+
 <nav class="uk-navbar-container uk-navbar-transparent" uk-navbar>
-  <div class="uk-navbar-right">
-    <ul class="uk-navbar-nav uk-visible@s">
-      {% for item in config.extra.navigation %}
-        {% if item.target is starting_with("http") %}
-          <li><a href="{{ item.target }}" target="_blank">{{ item.name }}</a></li>
-        {% else %}
-          <li><a href="{{ get_url(path=item.target) }}">{{ item.name }}</a></li>
-        {% endif %}
-      {% endfor %}
-    </ul>
-    <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
-  </div>
+  <ul class="uk-navbar-nav uk-visible@s">
+    {% for link in data.navigation %}
+      {% if link.target is starting_with("http") %}
+        <li><a href="{{ link.target }}" target="_blank">{{ link.name }}</a></li>
+      {% else %}
+        <li><a href="{{ get_url(path=link.target) }}">{{ link.name }}</a></li>
+      {% endif %}
+    {% endfor %}
+  </ul>
+  <a href="#" class="uk-navbar-toggle uk-hidden@s" uk-navbar-toggle-icon uk-toggle="target: #sidenav"></a>
 </nav>
 
 <div id="sidenav" uk-offcanvas="flip: true" class="uk-offcanvas">
   <div class="uk-offcanvas-bar">
     <ul class="uk-nav">
-      {% for item in config.extra.navigation %}
-        {% if item.target is starting_with("http") %}
-          <li><a href="{{ item.target }}" target="_blank">{{ item.name }}</a></li>
+      {% for link in data.navigation %}
+        {% if link.target is starting_with("http") %}
+          <li><a href="{{ link.target }}" target="_blank">{{ link.name }}</a></li>
         {% else %}
-          <li><a href="{{ get_url(path=item.target) }}">{{ item.name }}</a></li>
+          <li><a href="{{ get_url(path=link.target) }}">{{ link.name }}</a></li>
         {% endif %}
       {% endfor %}
     </ul>
