--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
     {% include "twitter.html" %}
 
     <link href="{{ get_url(path="style.css") }}" rel="stylesheet">
+    <link href="{{ get_url(path="fonts.css") }}" rel="stylesheet">
   </head>
 
   <body>
