tighter layout to get shorter lines to read

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <div class="uk-container uk-margin-large-bottom">
+    <div class="uk-container uk-container-small uk-margin-large-bottom">
 
       {% include "navigation.html" %}
 
